# psxtools

./: .gitmodules  CMakeLists.txt  README.md
blender/: json_export.py
imhex_patterns/: fastmodel.hexpat  model.hexpat  tim.hexpat
model_converter/src/: FastModel.cpp  FastModel.h  Json2FastModel.cpp  Json2PsxConverter.cpp  Math.h  PsxModel.cpp  PsxModel.h  main.cpp
obj2psx/src/: Obj2PsxConverter.cpp  Obj2PsxConverter.h  ObjFile.cpp  ObjFile.h  PsxModel.cpp  PsxModel.h  main.cpp
timtool/src/: Color.h  ImageLoader.cpp  TimCreateConfig.cpp  TimCreateConfig.h  TimFile.h  TimFileCreator.cpp  TimFileCreator.h  TimFileRead.cpp  TimFileWrite.cpp  main.cpp
